[package]
name = "aoc2019"
version = "0.1.0"
authors = ["mZbZ <lucas.mario@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elapsed ="*"

[[bin]]
name = "day1"
path = "day1/src/main.rs"

[[bin]]
name = "day2"
path = "day2/src/main.rs"

[[bin]]
name = "day3"
path = "day3/src/main.rs"

[[bin]]
name = "day4"
path = "day4/src/main.rs"

[[bin]]
name = "day5"
path = "day5/src/main.rs"

[[bin]]
name = "day6"
path = "day6/src/main.rs"

[[bin]]
name = "day7"
path = "day7/src/main.rs"

[[bin]]
name = "day8"
path = "day8/src/main.rs"

[[bin]]
name = "day9"
path = "day9/src/main.rs"

[[bin]]
name = "day11"
path = "day11/src/main.rs"

[[bin]]
name = "day12"
path = "day12/src/main.rs"